samples/_failures_safe/1761222578_8434fe_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8cb487fd.c: In function ‘print_state’:
./samples/SAFE/__tmp_8cb487fd.c:160:56: error: expected ‘]’ at end of input
  160 |         printf("Current state: %s\n", state_names[state
      |                                                        ^
      |                                                        ]
./samples/SAFE/__tmp_8cb487fd.c:160:9: error: expected declaration or statement at end of input
  160 |         printf("Current state: %s\n", state_names[state
      |         ^~~~~~
./samples/SAFE/__tmp_8cb487fd.c:160:9: error: expected declaration or statement at end of input
